---
source: compiler/sig_ast/src/ast_to_hir.rs
expression: "parse(stringify!(fn foo(comptime T: type) type\n        { struct { fn bar() type { T } } }))"
---
File {
    struct_idx: 0,
    ctx: Ctx {
        params: [],
        exprs: [],
        lets: [],
        structs: [
            Struct {
                fns: [
                    FnDecl {
                        is_pub: false,
                        name: "foo",
                        params: [
                            0,
                        ],
                        return_ty: 1,
                        body: Block {
                            stmts: [],
                            returns: 2,
                        },
                        ctx: Ctx {
                            params: [
                                Param {
                                    is_comptime: true,
                                    name: "T",
                                    ty: 0,
                                },
                            ],
                            exprs: [
                                Name(
                                    BuiltinType(
                                        Type,
                                    ),
                                ),
                                Name(
                                    BuiltinType(
                                        Type,
                                    ),
                                ),
                                Struct(
                                    0,
                                ),
                            ],
                            lets: [],
                            structs: [
                                Struct {
                                    fns: [
                                        FnDecl {
                                            is_pub: false,
                                            name: "bar",
                                            params: [],
                                            return_ty: 0,
                                            body: Block {
                                                stmts: [],
                                                returns: 1,
                                            },
                                            ctx: Ctx {
                                                params: [],
                                                exprs: [
                                                    Name(
                                                        BuiltinType(
                                                            Type,
                                                        ),
                                                    ),
                                                    Name(
                                                        Local(
                                                            Local {
                                                                level: 1,
                                                                kind: Param(
                                                                    0,
                                                                ),
                                                            },
                                                        ),
                                                    ),
                                                ],
                                                lets: [],
                                                structs: [],
                                            },
                                        },
                                    ],
                                    fields: [],
                                },
                            ],
                        },
                    },
                ],
                fields: [],
            },
        ],
    },
}
